<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutActivity"
    android:background="@drawable/gradient"
    android:forceDarkAllowed="false">

    <TextView
        android:id="@+id/txtSubLogoTextp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.05"
        android:text="@string/SubLogoTextP1"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/txtSubLogoTextp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtSubLogoTextp1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.00"
        android:text="@string/SubLogoTextP2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtSubLogoTextp2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.15"
        android:text="@string/SubLogoTextP3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>