<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".FuelActivity"
    android:forceDarkAllowed="false">

    <TextView
        android:id="@+id/txtFuelConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtFuelConsumption"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFuelPrice" />

    <TextView
        android:id="@+id/txtFuelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:text="@string/txtFuelPrice"
        android:textColor="#8a000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/txtDistance"
        android:textColor="#8a000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnFuelConstumption" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:text="@string/txtPrice"
        android:textColor="#8a000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDistance"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edttxtFuelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/hintValueDecimalZero"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#42000000"
        android:textColorHint="#60000000"
        android:backgroundTint="#046a1c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edttxtFuelConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/hintValueDecimalZero"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#42000000"
        android:textColorHint="#60000000"
        android:backgroundTint="#046a1c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtFuelPrice"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edttxtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/hintValueDecimalZero"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#42000000"
        android:textColorHint="#60000000"
        android:backgroundTint="#046a1c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtFuelConsumption"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:text="@string/txtCurrency"
        android:textColor="#8a000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <TextView
        android:id="@+id/txtPriceValue"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autoText="false"
        android:clickable="false"
        android:hint="0.0"
        android:textAlignment="textEnd"
        android:textColor="#919191"
        android:textColorHint="#8a000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtCurrency"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="BtnOnClkCalculate"
        android:text="@string/btnCalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceValue"
        app:layout_constraintVertical_bias="0.307" />

    <Spinner
        android:id="@+id/spnFuelConstumption"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:padding="5dp"
        android:backgroundTint="#046a1c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFuelPrice"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>