<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/Transparent"
    android:background="@color/Transparent">

    <!--layout for menu screen-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/textViewLeLu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/infected"
            android:text="@string/LogoTextPart1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/textViewTools"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/infected"
            android:text="@string/LogoTextPart2"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLeLu"
            app:layout_constraintVertical_bias="0.00" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTools">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnFuel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparent"
                    android:onClick="BtnOnClkFuel"
                    android:text="@string/btnFuel"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnWorkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparent"
                    android:onClick="BtnOnClkWorkout"
                    android:text="@string/btnWorkout"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.04" />

                <Button
                    android:id="@+id/ComingSoon1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparent"
                    android:text="@string/ComingSoon"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.04" />

                <Button
                    android:id="@+id/ComingSoon2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparent"
                    android:text="@string/ComingSoon"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.04" />

                <Button
                    android:id="@+id/ComingSoon3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparent"
                    android:text="@string/ComingSoon"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.04" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>